--- a/DontDisappoint/DDstyle.css
+++ b/DontDisappoint/DDstyle.css
@@ -1,7 +1,3 @@
-body {
-	font-family: 'Droid Sans', sans-serif;
-}
-
 .background {
 	position:absolute;
 	height:100%;
@@ -31,10 +27,12 @@ body {
 	z-index:100;
 }
 
-.section {
+.section {		
 	position:relative;
 	text-align: center;
-	font-family: Helvetica;
+	font-family: 'Droid Sans 700', sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 2px;
 	width:400px;
 	height:40px;
 	padding-top:30px;
@@ -60,6 +58,7 @@ body {
 
 .text {
 	padding:0px 30px 30px 30px;
+	font-family: 'Droid Sans', sans-serif;
 }
 
 #ch1 {
