--- a/DontDisappoint/DDstyle.css
+++ b/DontDisappoint/DDstyle.css
@@ -30,19 +30,22 @@
 .section {		
 	position:relative;
 	text-align: center;
-	font-family: 'Droid Sans 700', sans-serif;
+	font-family:'Oswald', sans-serif;
+	font-weight: 400;
 	text-transform: uppercase;
-	letter-spacing: 2px;
+	letter-spacing: .5px;
+	font-size: 18px;
 	width:400px;
 	height:40px;
-	padding-top:30px;
+	padding-top:20px;
+	padding-bottom:8px;
 	margin-top:-10px;
 	margin-bottom:10px;
 }
 
 .divider {
 	position:absolute;
-	bottom:-19px;
+	bottom:-20px;
 	z-index:50;
 }
 
@@ -59,6 +62,8 @@
 .text {
 	padding:0px 30px 30px 30px;
 	font-family: 'Droid Sans', sans-serif;
+	font-size: 15px;
+	line-height: 1.35;
 }
 
 #ch1 {
@@ -72,6 +77,8 @@
 }
 
 #ch2 {
+	letter-spacing: 1.5px;
+	font-weight: 400;
 	color:white;
 	background-color:black;
 	/*background-color:rgb(254,192,45);*/
@@ -81,6 +88,7 @@
 	display:none;
 	color:white;
 	background-color:black;	
+	letter-spacing: 1px;
 }
 
 #ch3 {
@@ -94,8 +102,11 @@
 }
 
 #ch4 {
+	letter-spacing: 1.5px;
+	font-weight: 400;
 	color:white;
 	background-color:black;
+	letter-spacing: 1px;
 }
 
 #ch4content {
@@ -114,6 +125,8 @@
 }
 
 #ch6 {
+	letter-spacing: 1.5px;
+	font-weight: 400;
 	color:white;
 	background-color:black;
 }
@@ -122,4 +135,17 @@
 	display:none;
 	color:white;
 	background-color:black;
+	letter-spacing: 1px;
+}
+
+.animation {
+	margin-left:-25px;
+}
+
+.subheader {
+	text-align: center;
+	color:gray;
+	font-weight: 400;
+	font-size: 14px;
+	letter-spacing: 2px;
 }
